Added cotroller and module

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "peliculas",
+  "type": "module",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,9 +22,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
