--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/typeorm": "^7.1.4",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nestjs-typeorm-paginate": "^2.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
