--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nestjs-typeorm-paginate": "^2.2.1",
